client/www/css/main.css
/* ... */
.b-profile-right-section-header-hover:hover {
  background-color: #fff;
  box-shadow: none;
}
.b-profile-right-section-header > .ui.header {
  margin-bottom: 0;
}
.b-profile-right-section-header > .ui.header > .content {
  font-weight: normal;
  color: #787878;
}
.b-profile-right-section-header > .ui.header > .icon {
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}
.b-profile-right-section-tip-fill img {
  width: 1.8em !important;
}
.b-profile-right-section-header > .ui.header.b-profile-right-section-tip-fill > .content {
  color: #deddde;
}
.b-profile-right-section-header > .ui.header.red > .content {
  color: #db2828 !important;
}
.b-profile-right-section-personalinfo .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_personal.png);
}
.b-profile-right-section-skills .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_skill.png);
}
.b-profile-right-section-educationbackground .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_education.png);
}
.b-profile-right-section-clubexperience .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_league.png);
}
.b-profile-right-section-workingexperience .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_experience.png);
}
.b-profile-right-section-language .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_language.png);
}
.b-profile-right-section-award .b-profile-right-section-header > .ui.header > .icon {
  background-image: url(/img/profile/icon_profile_award.png);
}
.b-profile-right-section-section {
  margin-bottom: 1px;
}
.b-profile-right-section-section:last-child {
  margin-bottom: 0;
}
.b-profile-right-section-form form,
.b-profile-right-section-displaymode {
  padding: 1.5rem 2rem;
}
.b-profile-right-section-form {
  background-color: #e5e5e5;
}
.b-profile-right-section-form .ui.basic.button.b-profile-btn-cancel {
  background-color: #fff !important;
  box-shadow: 0px 0px 0px 1px rgba(34, 36, 38, 0.35) inset, 0px 0px 0px 0px rgba(34, 36, 38, 0.15) inset !important;
}
.b-profile-right-section-form .ui.basic.button.b-profile-btn-cancel:hover {
  color: #fff !important;
  background-color: #ddd !important;
  box-shadow: 0px 0px 0px 1px #fff inset !important;
}
.b-profile-right-section-form .ui.form bplusdate.inline.fields .field > :first-child {
  margin-right: 0.5em !important;
}
.p-profile-right-section-form-bplusdate {
  position: relative;
}
.p-profile-right-section-form-bplusdate-select-alt {
  padding-left: 8px;
}
.p-profile-right-section-form-bplusdate-shortline {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -0.5rem;
  margin-left: -2rem;
  width: 2rem;
  height: 0.25rem;
  background-color: black;
}
html.bplus-lng-en .p-profile-right-section-form-bplusdate-shortline {
  margin-top: -0.5rem;
}
.b-prifile-date-select-box {
  min-width: 146px;
  max-width: 150px;
}
.b-profile-right-section-clubexperience .p-profile-right-section-form-bplusdate-shortline,
.b-profile-right-section-educationbackground .p-profile-right-section-form-bplusdate-shortline,
.b-profile-right-section-workingexperience .p-profile-right-section-form-bplusdate-shortline {
  top: 64px;
}
.b-profile-right-section-clubexperience .p-profile-right-section-form-bplusdate .eight.wide.column,
.b-profile-right-section-educationbackground .p-profile-right-section-form-bplusdate-shortline,
.b-profile-right-section-workingexperience .p-profile-right-section-form-bplusdate .eight.wide.column {
  padding-bottom: 0 !important;
}
.b-profile-right-section-clubexperience .p-profile-right-section-form-bplusdate .eight.wide.column.p-profile-right-section-form-bplusdate-row-bottom,
.b-profile-right-section-educationbackground .p-profile-right-section-form-bplusdate .eight.wide.column.p-profile-right-section-form-bplusdate-row-bottom,
.b-profile-right-section-workingexperience .p-profile-right-section-form-bplusdate .eight.wide.column.p-profile-right-section-form-bplusdate-row-bottom {
  padding-top: 0;
  padding-bottom: 1rem !important;
}
.ui.form .b-profile-right-section-form-textarea-tags textarea {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.b-profile-right-section-form-textarea-tags .b-profile-right-section-form-textarea-tags-tag-container {
  border: solid 1px rgba(34, 36, 38, 0.15);
  border-top: 0;
  padding: 1rem;
  background-color: #fff;
  border-radius: 0 0 0.28571429rem 0.28571429rem;
}
.ui.form .b-profile-right-section-form-textarea-tags .inline.fields:last-child {
  margin-bottom: 0;
}
.ui.form .b-profile-right-section-form-textarea-tags .inline.fields .field {
  padding-right: 0;
  width: 100%;
  text-align: center;
}
.ui.form .b-profile-right-section-form-textarea-tags .inline.fields .field > :first-child i.icon {
  margin-right: 0.75rem;
}
.ui.form .b-profile-right-section-form-textarea-tags .inline.fields .field > input {
  width: 84%;
}
.b-profile-right-section-displaymode {
  color: #323232;
  background-color: #fff;
}
.b-profile-right-section-txt {
  margin-bottom: 1rem;
  color: #787878;
}
.b-profile-right-section-txt:last-child {
  margin-bottom: 0;
}
.b-profile-right-section-txt > .b-profile-right-section-txt-tags {
  margin-right: 0.5em;
}
.b-profile-right-section-displaymode h2:hover,
.b-profile-right-section-txt:hover {
  background-color: #dedede;
  background-repeat: no-repeat;
  background-position: right center;
  background-size: contain;
}
.b-profile-right-section-displaymode h2:hover {
  background-image: url(/img/profile/icon_profile_edit_title.png);
}
.b-profile-right-section-txt:hover {
  background-image: url(/img/profile/icon_profile_edit_text.png);
}
.b-profile-right-section-displaymode h2,
.b-profile-right-section-txt {
  cursor: pointer;
}
/* ... */

